--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,35 @@
-head{
-font-family: "Times New Roman", Times, serif;
-font-size: 32px;
+#tony{
+
+  font-family: "Times New Roman", Times, serif;
+  font-size: 25px;
+  letter-spacing: 0.2px;
+  word-spacing: 0px;
+  color: #000000;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+
 }
 h1{
-font-size: 32px;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 25px;
+  letter-spacing: 0.2px;
+  word-spacing: 0px;
+  color: #000000;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
 
+}
+table, th, td {
+  border: 1px solid black;
+}
+tr{
+  font-size: 36px;
+  font-family: serif;Times;
 
 }
